# Lyriczilla

./: Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
applet/: LyricZilla_Applet.server  lyriczilla-panel.c
audacious/: Makefile.am  Makefile.in  lyriczilla-aud.c
data/: Makefile.am  Makefile.in  com.googlecode.LyricZilla.service.in  ui.glade
gnomeapplet/: LyricZilla_Applet.server  Makefile.am  lyriczilla-applet.py
gtk-lyricview/: Makefile  lyricview.c  lyricview.h
lyriczilla/: LyricZilla_Daemon  LyricZilla_Service  Makefile  Makefile.am  Makefile.in  lrc2xml.py  lyriczilla  lyriczilla_old  lz_core.py  lz_dbus_client.c  player.py  prefs.py  service.py  util.py
nest/: Makefile.am  nest.c
package/: Makefile  lyriczilla-0.1.20-all.deb  lyriczilla-0.1.22-all.deb  lyriczilla-0.1.24-all.deb  lyriczilla-0.1.31-all.deb  lyriczilla-0.1.34-all.deb  lyriczilla-0.1.36-all.deb  lyriczilla-0.1.39-all.deb  lyriczilla-0.1.40-all.deb  lyriczilla-0.1.44-all.deb  lyriczilla-plugin-audacious-0.1.20-i386.deb  lyriczilla-plugin-audacious-0.1.22-i386.deb  lyriczilla-plugin-audacious-0.1.24-i386.deb  lyriczilla-plugin-audacious-0.1.31-i386.deb  lyriczilla-plugin-audacious-0.1.34-i386.deb  lyriczilla-plugin-audacious-0.1.36-i386.deb  lyriczilla-plugin-audacious-0.1.39-i386.deb  lyriczilla-plugin-audacious-0.1.40-i386.deb  lyriczilla-plugin-audacious-0.1.44-i386.deb  lyriczilla-plugin-bmp-0.1.20-i386.deb  lyriczilla-plugin-bmp-0.1.22-i386.deb  lyriczilla-plugin-bmp-0.1.24-i386.deb  lyriczilla-plugin-bmp-0.1.31-i386.deb  lyriczilla-plugin-bmp-0.1.34-i386.deb  lyriczilla-plugin-bmp-0.1.36-i386.deb  lyriczilla-plugin-bmp-0.1.39-i386.deb  lyriczilla-plugin-bmp-0.1.40-i386.deb  lyriczilla-plugin-bmp-0.1.44-i386.deb  lyriczilla.list
package/control/: lyriczilla  lyriczilla-plugin-audacious  lyriczilla-plugin-bmp
panel/: LyricZilla_Applet.server
player/: Makefile.am  Makefile.in  amarok.py  audacious.py  banshee.py  listen.py  quodlibet.py  rhythmbox.py
plugin-bmp/: .lyriczilla-bmp.c.swp  Makefile  lyriczilla-bmp.c
