#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.61)
AC_INIT(lyriczilla, 0.3, lqs.buaa@gmail.com)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
                 data/Makefile
                 lyriczilla/Makefile
                 player/Makefile])
AC_OUTPUT
